Enable brcm80211 from staging in default config

--- a/arch/arm/configs/tf101_gnulinux_defconfig
+++ b/arch/arm/configs/tf101_gnulinux_defconfig
@@ -2152,6 +2152,9 @@ CONFIG_RTC_DRV_TPS6586X=y
 # CONFIG_UIO is not set
 CONFIG_STAGING=y
 # CONFIG_STAGING_EXCLUDE_BUILD is not set
+CONFIG_BRCMUTIL=m
+CONFIG_BRCMFMAC=m
+CONFIG_BRCMDBG=y
 # CONFIG_VIDEO_TM6000 is not set
 # CONFIG_USB_IP_COMMON is not set
 # CONFIG_PRISM2_USB is not set
